content/manual/v6.0/source/includes/driver-examples/driver-example-query-intro.rst
.. tabs-drivers::

   tabs:
     - id: shell
       content: |
         This page provides examples of |query_operations| using the
         :method:`db.collection.find()` method in :binary:`mongosh`.

         .. include:: /includes/driver-examples/examples-intro.rst

     - id: compass
       content: |
         This page provides examples of |query_operations| using
         :ref:`MongoDB Compass <compass-index>`. 

         .. include:: /includes/driver-examples/examples-intro.rst

     - id: python
       content: |
         This page provides examples of |query_operations| using the
         :py:meth:`pymongo.collection.Collection.find` method in the
         `PyMongo <https://www.mongodb.com/docs/languages/python/pymongo-driver/current/>`_
         Python driver.

         .. include:: /includes/driver-examples/examples-intro.rst

     - id: motor
       content: |
         This page provides examples of |query_operations| using the
         :py:meth:`motor.motor_asyncio.AsyncIOMotorCollection.find`
         method in the `Motor <https://motor.readthedocs.io/en/stable/>`_
         driver.

         .. include:: /includes/driver-examples/examples-intro.rst

     - id: java-sync
       content: |
         This page provides examples of |query_operations| using the
         com.mongodb.client.MongoCollection.find_ method in the MongoDB
         `Java Synchronous Driver`_.

         .. tip::

            The driver provides com.mongodb.client.model.Filters_
            helper methods to facilitate the creation of filter
            documents. The examples on this page use these methods to
            create the filter documents.

         .. include:: /includes/driver-examples/examples-intro.rst

     - id: java-async
       content: |
         This page provides examples of |query_operations| using the
         `com.mongodb.reactivestreams.client.MongoCollection.find <http://mongodb.github.io/mongo-java-driver-reactivestreams/1.6/javadoc/com/mongodb/reactivestreams/client/MongoCollection.html#find()>`_
         method in the MongoDB `Java Reactive Streams Driver <http://mongodb.github.io/mongo-java-driver-reactivestreams/1.6/>`_.

         .. include:: /includes/driver-examples/examples-intro.rst

     - id: nodejs
       content: |
         This page provides examples of |query_operations| using the
         :node-api:`Collection.find() <Collection.html#find>` method in
         the :node-docs:`MongoDB Node.js Driver <>`.

         .. include:: /includes/driver-examples/examples-intro.rst

     - id: php
       content: |
         This page provides examples of |query_operations| using the
         :phpmethod:`MongoDB\\Collection::find() <phpmethod.MongoDB\\Collection::find()>`
         method in the
         `MongoDB PHP Library <https://www.mongodb.com/docs/drivers/php-libraries/>`_.

         .. include:: /includes/driver-examples/examples-intro.rst

     - id: ruby
       content: |
         This page provides examples of |query_operations| using the
         :ruby-api:`Mongo::Collection#find()<Collection.html#find-instance_method>`
         method in the
         :ruby:`MongoDB Ruby Driver </>`.

         .. include:: /includes/driver-examples/examples-intro.rst

     - id: scala
       content: |
         This page provides examples of |query_operations| using the
         :scala-api:`collection.find()<find[C](filter:org.mongodb.scala.bson.conversions.Bson)(implicite:org.mongodb.scala.bson.DefaultHelper.DefaultsTo[C,TResult],implicitct:scala.reflect.ClassTag[C]):org.mongodb.scala.FindObservable[C]>` method
         in the
         `MongoDB Scala Driver <http://mongodb.github.io/mongo-scala-driver/>`_.

         .. include:: /includes/driver-examples/examples-intro.rst

     - id: csharp
       content: |
         This page provides examples of |query_operations| using the
         :csharp-api:`MongoCollection.Find() <M_MongoDB_Driver_MongoCollection_1_Find>`
         method in the
         `MongoDB .NET/C# Driver <https://mongodb.github.io/mongo-csharp-driver/>`_.

         .. include:: /includes/driver-examples/examples-intro.rst

     - id: go
       content: |
         This page provides examples of |query_operations| using the
         :go-api:`Collection.Find <mongo#Collection.Find>`
         function in the
         `MongoDB Go Driver <https://github.com/mongodb/mongo-go-driver/>`_.

         .. include:: /includes/driver-examples/examples-intro.rst

